protegidas rutas con validaciones
